# react-native-crosssqlite

./: CONTRIBUTING.md  Crosssqlite.podspec  LICENSE  README.md  RELEASE.md  package-lock.json  package.json  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/crosssqlite/: CrosssqliteModule.kt  CrosssqlitePackage.kt
cpp/: react-native-crosssqlite.cpp  react-native-crosssqlite.h  sqlite_bridge.cpp  sqlite_bridge.h
example/: Gemfile  app.json  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/crosssqlite/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/CrosssqliteExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/CrosssqliteExample.xcodeproj/: project.pbxproj
example/ios/CrosssqliteExample.xcodeproj/xcshareddata/xcschemes/: CrosssqliteExample.xcscheme
example/ios/CrosssqliteExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Crosssqlite.h  Crosssqlite.mm
src/: NativeCrosssqlite.ts  index.tsx
windows/: Crosssqlite.sln
windows/Crosssqlite/: Crosssqlite.def  Crosssqlite.vcxproj  NativeCrosssqliteSpec.g.h  ReactPackageProvider.cpp  ReactPackageProvider.h  module.json  pch.h
